# M4xengine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Debugging.h
include/engine/: Application.h  Blueprint.h  Collider.h  Input.h  M4xObject.h  Physics.h  Scene.h
include/game/: FreeCamera.h  Game.h  Terrain.h  TestObject.h  game.h
include/rendering/: M4xObject.h  Model.h  Renderer.h  Shader.h  VertexArray.h  VertexBufferLayout.h
res/shaders/extra/: grid_fragment.glsl  grid_vertex.glsl
res/shaders/standard/: basic_unlit_fragment.glsl  basic_vertex.glsl
src/: Shader.cpp  Texture.cpp  main.cpp
src/engine/: Application.cpp  Blueprint.cpp  Collider.cpp  Input.cpp  M4xObject.cpp  Physics.cpp  Scene.cpp
src/game/: FreeCamera.cpp  Game.cpp  Terrain.cpp  TestObject.cpp  game.cpp
src/rendering/: IndexBuffer.cpp  M4xObject.cpp  Model.cpp  Renderer.cpp  Shader.cpp  SolarObject.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
